# Rook

./: .gitignore  Cargo.toml  README.html  README.md  REMAINING.md  Rook_Handoff.md  download_maxrebo.sh  download_suno_playlist.sh  quickupdate.html  quickupdate.md  rename_suno.sh
assets/: Rook.icns
crates/mlt-sys/: Cargo.toml  build.rs
crates/mlt-sys/src/: lib.rs
crates/rook-cli/: Cargo.toml
crates/rook-cli/src/: main.rs
crates/rook-core/: Cargo.toml
crates/rook-core/benches/: timeline.rs
crates/rook-core/src/: asset.rs  canvas.rs  clip.rs  commands.rs  effect.rs  error.rs  history.rs  ids.rs  keyframe.rs  lib.rs  marker.rs  multicam.rs  plugin.rs  project.rs  snapshot.rs  time.rs  timeline.rs  track.rs  transform.rs
crates/rook-decode/: Cargo.toml
crates/rook-decode/src/: decoder.rs  error.rs  frame.rs  lib.rs  probe.rs
crates/rook-decoder-native/: Cargo.toml  build.rs
crates/rook-decoder-native/src/: avfoundation_shim.h  avfoundation_shim.m  fallback.rs  gstreamer_backend.rs  lib.rs  macos.rs  wgpu_integration.rs
crates/rook-engine/: Cargo.toml
crates/rook-engine/src/: cache.rs  crash.rs  engine.rs  error.rs  lib.rs  pool.rs  proxy.rs  resolve.rs
crates/rook-exporters/: Cargo.toml
crates/rook-exporters/src/: edl.rs  fcp7xml.rs  fcpxml.rs  lib.rs
crates/rook-ipc/: Cargo.toml
crates/rook-ipc/src/: lib.rs  methods.rs  protocol.rs  server.rs  transport.rs  types.rs
crates/rook-jobs/: Cargo.toml
crates/rook-jobs/src/: lib.rs
crates/rook-media-io/: Cargo.toml
crates/rook-media-io/src/: lib.rs  yuv_decode.rs
crates/rook-mlt/: Cargo.toml
crates/rook-mlt/src/: consumer.rs  error.rs  filter.rs  frame.rs  lib.rs  playlist.rs  producer.rs  profile.rs  properties.rs  tractor.rs  transition.rs
crates/rook-plugin-host/: Cargo.toml
crates/rook-plugin-host/src/: error.rs  lib.rs  ofx_host.rs  param_map.rs  wasm_host.rs
crates/rook-project-db/: Cargo.toml
crates/rook-project-db/migrations/: V0001__init.sql  V0002__jobs.sql  V0003__timeline.sql  V0004__transcripts.sql  V0006__proxy_jobs.sql
crates/rook-project-db/src/: lib.rs
crates/rook-renderer/: Cargo.toml
crates/rook-renderer/src/: cpu.rs  lib.rs  preview.rs
crates/rook-renderer/src/compositor/: blend.wgsl  blend_mode.rs  frame.rs  layer.wgsl  mask.wgsl  mod.rs  pipeline.rs
crates/rook-renderer/src/effects/: gaussian_blur.wgsl  mod.rs
crates/rook-renderer/src/shaders/: blend.wgsl  preview_nv12.wgsl  preview_p010.wgsl  preview_rgba.wgsl  scale.wgsl  transform.wgsl  yuv_to_rgb.wgsl
crates/rook-time/: Cargo.toml
crates/rook-time/src/: frame_rate.rs  lib.rs  media_time.rs  timecode.rs
crates/rook-timeline/: Cargo.toml
crates/rook-timeline/src/: commands.rs  graph.rs  lib.rs
crates/rook-ui/: Cargo.toml
crates/rook-ui/src/: app.rs  main.rs  main.rs.bak  theme.rs
crates/rook-ui/src/audio/: decode.rs  mod.rs  output.rs
crates/rook-ui/src/panels/: composite_cpu.rs  gallery.rs  inspector.rs  markers.rs  mod.rs  multicam.rs  plugins.rs  preview.rs  srt.rs  timeline.rs  video_preview.rs  vu_meter.rs
crates/rook-ui/src/widgets/: clip_block.rs  mod.rs  playhead.rs  thumbnail.rs  waveform.rs
docs/: ARCHITECTURE.md  FEATURE_PARITY.md  HANDOFF_2026-06-04.md  IPC.md  SAVED_LOC.md
examples/: agent_control.py  headless_export.rs
