[package]
name = "rook-decode"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "FFmpeg-based media decode — from cutlass-decode"

[dependencies]
ffmpeg-next.workspace = true
rook-core.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
