[package]
name = "rook-engine"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Headless editing engine for Rook — project state + media decode + MLT bridge"

[dependencies]
rook-core.workspace = true
rook-plugin-host = { workspace = true, features = ["full"] }
rook-decode.workspace = true
rook-mlt.workspace = true
rook-timeline.workspace = true
rook-project-db.workspace = true
rook-decoder-native = { workspace = true, optional = true }
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
thiserror.workspace = true
parking_lot.workspace = true
crossbeam-channel.workspace = true
rustc-hash.workspace = true
uuid.workspace = true
chrono.workspace = true
rusqlite.workspace = true
dirs.workspace = true
anyhow = "1"

ffmpeg-next.workspace = true

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[features]
default = []
native-decode = ["dep:rook-decoder-native"]
