[package]
name = "rook-exporters"
version.workspace = true
edition = "2021"
license.workspace = true
description = "Professional export formats (FCPXML, EDL, JSON) — vendored from Gausian (Apache 2.0)"

[dependencies]
rook-timeline = { path = "../rook-timeline" }
rook-project-db = { path = "../rook-project-db" }
anyhow = "1"
thiserror = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
quick-xml = { version = "0.36", features = ["serialize"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
regex = "1"
walkdir = "2"
