[package]
name = "rook-media-io"
version.workspace = true
edition = "2021"
license.workspace = true
description = "Media I/O helpers — vendored from Gausian (Apache 2.0)"

[dependencies]
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
thiserror.workspace = true
rook-decoder-native.workspace = true
which = "7"
