[package]
name = "rook-project-db"
version.workspace = true
edition = "2021"
license.workspace = true
description = "SQLite project persistence — vendored from Gausian (Apache 2.0)"

[dependencies]
anyhow = "1"
chrono = { version = "0.4", features = ["clock"] }
dirs = "5"
rusqlite = { version = "0.31", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
uuid = { version = "1", features = ["v4", "serde"] }
