[package]
name = "rook-time"
version = "0.1.0"
edition = "2024"
description = "Ticks-based media time, frame rates, and timecode — vendored and adapted from koughen/Editor (MIT)"
license = "MIT"

[dependencies]
serde = { version = "1", features = ["derive"], optional = true }
num-traits = "0.2"

[features]
default = ["serde"]
serde = ["dep:serde"]
